Fixed mobile spacing and breaking issue

--- a/scss/_activity.scss
+++ b/scss/_activity.scss
@@ -276,7 +276,11 @@
         box-sizing: border-box;
         box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.04);
         margin-top: 24px;
-        padding: 24px;
+        padding: 16px;
+
+        @include tablet-and-up {
+            padding: 24px;
+        }
     }
 
     &__accordion-label {
@@ -361,6 +365,7 @@
         p {
             margin: 0;
             margin-bottom: 8px;
+            word-break: break-all;
         }
     }
 
